[package]
name = "osm-dijkstra-pre"
version = "1.0.0"
authors = [ "Felix Buehler <account@buehler.rocks>", "Simon Matejetz <asdf@todo.de>" ]

include = [
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs"
]

[dependencies]
osmpbfreader = "0.13"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
