[package]
name = "osm_ch_pre"
version = "1.0.0"
authors = [ "Felix Buehler <account@buehler.rocks>" ]
edition = "2018"
include = [
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
]

[dependencies]
bincode = "1.2"
osmpbfreader = "0.13"
rayon = "1.3"
serde = { version = "1.0", features = ["derive"] }
