[package]
name = "osm_ch_web"
version = "1.0.0"
authors = [ "Felix Buehler <account@buehler.rocks>" ]
edition = "2018"
include = [
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
]

[dependencies]
actix-files = "0.2"
actix-rt = "1.1"
actix-web = "2.0"
bincode = "1.2"
env_logger = "0.7"
log = "0.4"
rayon = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
