[package]
name = "osm_ch_web"
version = "1.0.0"
authors = [ "Felix Buehler <account@buehler.rocks>" ]
edition = "2018"
include = [
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
]

[dependencies]
actix-files = "0.6"
actix-web = "4.1"
bincode = "1.3"
env_logger = "0.9"
log = "0.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
